--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: iosapp
-description: iop app for fiver
+name: Current_Trading_Halts
+description: Current Trading Halts App for Fiverr
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -26,6 +26,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_local_notifications: ^2.0.1
 
 dev_dependencies:
   flutter_test:
