--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="iosapp"
+        android:label="Current_Trading_Halts"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
